	Added: 20_dovecot_connections.pl listener file (allow to increase the mail_max_userip_connections)
	Added: 30_dovecot_namespace.pl listener file (creates the INBOX. as a compatibility name)
	Added: 40_dovecot_pfs.pl listener file (activate the Perfect Forward Secrecy logging)
	Added: 50_dovecot_plaintext.pl listener file (disable plaintext logins and force TLS)
	Added: 10_nginx_hsts.pl listener file (enable HTTP Strict Transport Security (HSTS))
	Added: 60_postfix_pfs.pl listener file (add the self generated EDH parameter files for Perfect Forward Secrecy (PFS))
	Added: 70_postfix_submission_tls.pl listener file (force TLS connection on postfix submission)
	Added: 10_proftpd_tuning.pl listener file (removes the ServerIdent information, and forces TLS)
	Rewritten: 10_named_zonetransfer.pl listener file (now named 10_named_slave_provisioning.pl)
	Updated: 10_postfix_smarthost listener file (We need Cyrus SASL; Dovecot SASL impl. not supported by Postfix for smtp)

FRONTEND
	Changed: error_reporting configuration parameter no longer editable when using Apache2 ITK httpd server impl.
	Fixed: admin/settings.php menu state is not saved
	Fixed: Customer's PHP settings must be synchronized when updating PHP permissions of their resellers
	Fixed: Slow DOM content loading due to some built-in functions override (imscp.js)
	Fixed: Wrong edit link for domain alias DNS record (external mail DNS record)
	Removed: Default PHP configuration options - admin level (see errata file)
	Removed: Hosting plan feature - admin level (see errata file)

INSTALLER
	Added: Allow to specify package version to install in distribution package files
	Added: Conflict for procmail package to force its removal when running i-MSCP installer
	Added: Conflict for sasl2-bin package to force its removal when running i-MSCP installer (we don't need saslauthd)
	Added: Default administrator email in aliases(5) table for root account (e.g. root: <default_admin_email>)