@@ -16,7 +16,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 #
-## Listener file that allows to setup Bind9 for local network.
+## Allows to setup Bind9 for local network.
 #
 
 package Listener::Bind9::Localnets;
