@@ -16,7 +16,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301 USA
 
 #
-## Listener file to force TLS connection on postfix submission.
+## Enforces TLS connection on Postfix submission.
 #
 
 package Listener::Postfix::Submission::TLS;
